# market-sizing-tool

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run_cli.py  sources.txt
marketSizingTool/: app.py  charts.py  data.py  forecasting.py  sizing.py
sample_data/: telecom_revenue.csv
src/marketSizingTool/: charts.py  data.py  gemini_summary.py  visualization.py
templates/: index.html
